@@ -2,7 +2,6 @@ pluginexecdir = $(gimpplugindir)/plug-ins
 
 scripts = \
 	colorxhtml.py		\
-	clothify.py		\
 	foggify.py		\
 	gimpcons.py		\
 	happy-valley-relief.py	\
@@ -15,7 +14,8 @@ scripts = \
 
 test_scripts = \
 	benchmark-foreground-extract.py	\
-	sphere.py			\
+	clothify.py		\
+	sphere.py		\
 	whirlpinch.py
 
 if GIMP_UNSTABLE
